syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ExampleDataApiProto";
option java_package = "com.techorgx.example.api.v1";

service ExampleApi {
  rpc GetPerson (PersonRequest) returns (PersonResponse);
}

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
}

message PersonRequest {
  int32 person_id = 1;
}

message PersonResponse {
  Person person = 1;
}
